# audx

./: .gitignore  CMakeLists.txt  LEGAL_NOTICES.md  LICENSE  README.md  main.c
include/: audio_dec.h  audio_enc.h  audio_filter.h
scripts/: build.sh
src/: audio_dec.c  audio_enc.c  audio_filter.c
